--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,8 @@ services:
   - docker
 
 script:
-- curl -o http://storage.googleapis.com/kubernetes-helm/helm-${TRAVIS_TAG:-v2.0.0}-linux-amd64.tar.gz
-- tar -xvf /tmp/helm-${TRAVIS_TAG:-v2.0.0}-linux-amd64.tar.gz
+- curl -o ./helm.tar.gz http://storage.googleapis.com/kubernetes-helm/helm-${TRAVIS_TAG:-v2.0.0}-linux-amd64.tar.gz
+- tar -xvf ./helm.tar.gz
 - cp linux-amd64/helm ./helm
 - chmod +x ./helm
 
