--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ services:
   - docker
 
 script:
-- curl -o ./helm.tar.gz http://storage.googleapis.com/kubernetes-helm/helm-${TRAVIS_TAG:-v2.0.0}-linux-amd64.tar.gz
+- curl -o ./helm.tar.gz http://storage.googleapis.com/kubernetes-helm/helm-v2.6.2-linux-amd64.tar.gz
 - tar -xvf ./helm.tar.gz
 - cp linux-amd64/helm ./helm
 - chmod +x ./helm
